--- a/LearnKotlin/app/src/main/res/layout/activity_second.xml
+++ b/LearnKotlin/app/src/main/res/layout/activity_second.xml
@@ -1,11 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button 1" />
+        android:text="Button 2" />
 </LinearLayout>
